--- a/Advertising.conf
+++ b/Advertising.conf
@@ -1,4 +1,4 @@
-hostname = in.m.jd.com,*.migu.cn,*.miguvideo.com, edith.xiaohongshu.com, pages.xiaohongshu.com, referee.xiaohongshu.com, h.app.coc.10086.cn, *.pornhub.com, 18comic.org, 18comic.vip, *.avple.tv, jable.tv, missav.com, mei.tu,  mxsa.mxbc.net, *.ximalaya.com, www.zhihu.com, api.zhihu.com, zhuanlan.zhihu.com, appcloud2.zhihu.com, m-cloud.zhihu.com, api.weibo.*, *.api.weibo.*, mapi.weibo.*, new.vip.weibo.cn, boot.biz.weibo.com, creditcardapp.bankcomm.com, creditcardapp.bankcomm.cn, news.l.qq.com, btrace.qq.com, tc.qq.com, buy.itunes.apple.com, www.google.cn, *.docer.wps.cn, vipapi.wps.cn, *account.wps.cn, *account.wps.com, boxer.baidu.com, www.firefox.com.cn, api.abema.io, *.snssdk.com, -redirector*.googlevideo.com, *.googlevideo.com, www.youtube.com, s.youtube.com, youtubei.googleapis.com, api.weibo.cn, mapi.weibo.com, -lark-frontier-hl.snssdk.com, api.21jingji.com, service.4gtv.tv, app.58.com, pic?.ajkimg.com, gw.alicdn.com, heic.alicdn.com, m*.amap.com, gw.kaola.com, api-new.app.acfun.cn, api.bjxkhc.com, newclient.map.baidu.com, mime.baidu.com, act.vip.iqiyi.com, intl.iqiyi.com, manga.bilibili.com, app.api.ke.com, www.bodivis.com.cn, yxyapi*.drcuiyutao.com, app.badmintoncn.com, client.app.coc.10086.cn, m.client.10010.com, www.cntv.com, cap.caocaokeji.cn, api.caijingmobile.com, app-gw.csdn.net, m.ctrip.com, app.dewu.com, api.douban.com, rtbapi.douyucdn.cn, api.dangdang.com, e.dangdang.com, daoyu.sdo.com, capis*.didapinche.com, maicai.api.ddxq.mobi, mobileapi-v6.elong.com, i.ys7.com, www.flyertea.com, dsa-mfp.fengshows.cn, *-release.wuta-cam.com, gateway.shouqiev.com, dl.app.gtja.com, smkmp.96225.com, business.msstatic.com, imeclient.openspeech.cn, webboot.zhangyue.com, nnapp.cloudbae.cn, icc.one, jxd524.github.io, ib-soft.net, www.inoreader.com, list-app-m.i4.cn, api.jxedt.com, *.kakamobi.cn, *.kingsoft-office-service.com, api.gotokeep.com, api.kkmh.com, api.club.lenovo.cn, api.m.mi.com, api.jr.mi.com, api-mifit.huami.com, home.mi.com, api.mgzf.com, flowplus.meituan.net, capi.mwee.cn, v?-api.miaopai.com, mapi.mafengwo.cn, app.mixcapp.com, appconf.mail.163.com, interface*.music.163.com, support.you.163.com, p.du.163.com, app-api.niu.com, gfp.veta.naver.com, slapi.oray.net, pss.txffp.com, api.yangkeduo.com, api.pinduoduo.com, mrobot.pconline.com.cn, mrobot.pcauto.com.cn, open.qyer.com, media.qyer.com, api.qbb6.com, magev6.if.qidian.com, api.rr.tv, *.uve.weibo.com, weibointl.api.weibo.cn, tqt.weibo.cn, *.k.sohu.com, *.tv.sohu.com, ap*.smzdm.com, sh-gateway.shihuo.cn, gw-passenger.01zhuanche.com, mpcs.suning.com, ccsp-egmas.sf-express.com, shopic.sf-express.com, api*.futunn.com, ssl.kohsocialapp.qq.com, 4gimg.map.qq.com, r.inews.qq.com, news.ssp.qq.com, mp.weixin.qq.com, m.tuniu.com, img*.10101111cdn.com, msg.umengcloud.com, api.vuevideo.net, api.vistopia.com.cn, thor.weidian.com, api.waitwaitpay.com, api-one.wallstcn.com, api.xiachufang.com, api.xueqiu.com, promo.xueqiu.com, www.xiaohongshu.com, api.yizhibo.com, a.qiumibao.com, *.zhuishushenqi.com, syh.zybang.com, api.izuiyou.com, tiku.zhan.com, m.baidu.com, www.baidu.com, zhidao.baidu.com, app.bilibili.com, api.bilibili.com, api.live.bilibili.com, grpc.biliapi.net, *.weibo.cn, *.weibo.com, weibo.com, jzts.cmpassport.com, wallet.95516.com, weixin110.qq.com, security.wechat.com, api.alipan.com, member.alipan.com, pan.baidu.com, ndstatic.cdn.bcebos.com, staticsns.cdn.bcebos.com, issuecdn.baidupcs.com, update.pan.baidu.com, fc-video.cdn.bcebos.com, rp.hpplay.cn, creditcardapp.bankcomm.cn, creditcardapp.bankcomm.com, creditcard.bankcomm.cn, creditcard.bankcomm.com, us.l.qq.com, acs.m.taobao.com, guide-acs.m.taobao.com, poplayer.template.alibaba.com, api2.helper.qq.com, *.beacon.qq.com, mi.gdt.qq.com, lives.l.qq.com, imgcache.qq.com, mtteve.beacon.qq.com, vv.video.qq.com, qt.qq.com, 3gimg.qq.com, y.gtimg.cn, splashqqlive.gtimg.com, qzonestyle.gtimg.cn, discuz.gtimg.cn, bla.gtimg.com, mmgr.gtimg.com, bk.bingo.qq.com, acs.m.goofish.com, g-acs.m.goofish.com, dinamicx.alibabausercontent.com, acs.youku.com, push.m.youku.com, un-acs.youku.com, mcmm.caiyun.feixin.10086.cn, mrp.mcloud.139.com, ad.mcloud.139.com, middle.yun.139.com, cloud.189.cn, zt-app.go189.cn, api.m.jd.com, dns.jd.com, m.360buyimg.com, bdsp-x.jd.com, dsp-x.jd.com, ms.jr.jd.com, tiebac.baidu.com, *.tieba.baidu.com
+hostname = *.mgtv.com, in.m.jd.com,*.migu.cn,*.miguvideo.com, edith.xiaohongshu.com, pages.xiaohongshu.com, referee.xiaohongshu.com, h.app.coc.10086.cn, *.pornhub.com, 18comic.org, 18comic.vip, *.avple.tv, jable.tv, missav.com, mei.tu,  mxsa.mxbc.net, *.ximalaya.com, www.zhihu.com, api.zhihu.com, zhuanlan.zhihu.com, appcloud2.zhihu.com, m-cloud.zhihu.com, api.weibo.*, *.api.weibo.*, mapi.weibo.*, new.vip.weibo.cn, boot.biz.weibo.com, creditcardapp.bankcomm.com, creditcardapp.bankcomm.cn, news.l.qq.com, btrace.qq.com, tc.qq.com, buy.itunes.apple.com, www.google.cn, *.docer.wps.cn, vipapi.wps.cn, *account.wps.cn, *account.wps.com, boxer.baidu.com, www.firefox.com.cn, api.abema.io, *.snssdk.com, -redirector*.googlevideo.com, *.googlevideo.com, www.youtube.com, s.youtube.com, youtubei.googleapis.com, api.weibo.cn, mapi.weibo.com, -lark-frontier-hl.snssdk.com, api.21jingji.com, service.4gtv.tv, app.58.com, pic?.ajkimg.com, gw.alicdn.com, heic.alicdn.com, m*.amap.com, gw.kaola.com, api-new.app.acfun.cn, api.bjxkhc.com, newclient.map.baidu.com, mime.baidu.com, act.vip.iqiyi.com, intl.iqiyi.com, manga.bilibili.com, app.api.ke.com, www.bodivis.com.cn, yxyapi*.drcuiyutao.com, app.badmintoncn.com, client.app.coc.10086.cn, m.client.10010.com, www.cntv.com, cap.caocaokeji.cn, api.caijingmobile.com, app-gw.csdn.net, m.ctrip.com, app.dewu.com, api.douban.com, rtbapi.douyucdn.cn, api.dangdang.com, e.dangdang.com, daoyu.sdo.com, capis*.didapinche.com, maicai.api.ddxq.mobi, mobileapi-v6.elong.com, i.ys7.com, www.flyertea.com, dsa-mfp.fengshows.cn, *-release.wuta-cam.com, gateway.shouqiev.com, dl.app.gtja.com, smkmp.96225.com, business.msstatic.com, imeclient.openspeech.cn, webboot.zhangyue.com, nnapp.cloudbae.cn, icc.one, jxd524.github.io, ib-soft.net, www.inoreader.com, list-app-m.i4.cn, api.jxedt.com, *.kakamobi.cn, *.kingsoft-office-service.com, api.gotokeep.com, api.kkmh.com, api.club.lenovo.cn, api.m.mi.com, api.jr.mi.com, api-mifit.huami.com, home.mi.com, api.mgzf.com, flowplus.meituan.net, capi.mwee.cn, v?-api.miaopai.com, mapi.mafengwo.cn, app.mixcapp.com, appconf.mail.163.com, interface*.music.163.com, support.you.163.com, p.du.163.com, app-api.niu.com, gfp.veta.naver.com, slapi.oray.net, pss.txffp.com, api.yangkeduo.com, api.pinduoduo.com, mrobot.pconline.com.cn, mrobot.pcauto.com.cn, open.qyer.com, media.qyer.com, api.qbb6.com, magev6.if.qidian.com, api.rr.tv, *.uve.weibo.com, weibointl.api.weibo.cn, tqt.weibo.cn, *.k.sohu.com, *.tv.sohu.com, ap*.smzdm.com, sh-gateway.shihuo.cn, gw-passenger.01zhuanche.com, mpcs.suning.com, ccsp-egmas.sf-express.com, shopic.sf-express.com, api*.futunn.com, ssl.kohsocialapp.qq.com, 4gimg.map.qq.com, r.inews.qq.com, news.ssp.qq.com, mp.weixin.qq.com, m.tuniu.com, img*.10101111cdn.com, msg.umengcloud.com, api.vuevideo.net, api.vistopia.com.cn, thor.weidian.com, api.waitwaitpay.com, api-one.wallstcn.com, api.xiachufang.com, api.xueqiu.com, promo.xueqiu.com, www.xiaohongshu.com, api.yizhibo.com, a.qiumibao.com, *.zhuishushenqi.com, syh.zybang.com, api.izuiyou.com, tiku.zhan.com, m.baidu.com, www.baidu.com, zhidao.baidu.com, app.bilibili.com, api.bilibili.com, api.live.bilibili.com, grpc.biliapi.net, *.weibo.cn, *.weibo.com, weibo.com, jzts.cmpassport.com, wallet.95516.com, weixin110.qq.com, security.wechat.com, api.alipan.com, member.alipan.com, pan.baidu.com, ndstatic.cdn.bcebos.com, staticsns.cdn.bcebos.com, issuecdn.baidupcs.com, update.pan.baidu.com, fc-video.cdn.bcebos.com, rp.hpplay.cn, creditcardapp.bankcomm.cn, creditcardapp.bankcomm.com, creditcard.bankcomm.cn, creditcard.bankcomm.com, us.l.qq.com, acs.m.taobao.com, guide-acs.m.taobao.com, poplayer.template.alibaba.com, api2.helper.qq.com, *.beacon.qq.com, mi.gdt.qq.com, lives.l.qq.com, imgcache.qq.com, mtteve.beacon.qq.com, vv.video.qq.com, qt.qq.com, 3gimg.qq.com, y.gtimg.cn, splashqqlive.gtimg.com, qzonestyle.gtimg.cn, discuz.gtimg.cn, bla.gtimg.com, mmgr.gtimg.com, bk.bingo.qq.com, acs.m.goofish.com, g-acs.m.goofish.com, dinamicx.alibabausercontent.com, acs.youku.com, push.m.youku.com, un-acs.youku.com, mcmm.caiyun.feixin.10086.cn, mrp.mcloud.139.com, ad.mcloud.139.com, middle.yun.139.com, cloud.189.cn, zt-app.go189.cn, api.m.jd.com, dns.jd.com, m.360buyimg.com, bdsp-x.jd.com, dsp-x.jd.com, ms.jr.jd.com, tiebac.baidu.com, *.tieba.baidu.com
 
 
 # > 京东比价
@@ -466,6 +466,39 @@ https:\/\/pan\.baidu\.com\/rest\/\d\.\d\/membership\/user url script-response-bo
 ^https?:\/\/mime\.baidu\.com\/v\d\/IosStart\/getStartInfo$ url reject
 ^https?:\/\/mime\.baidu\.com\/v\d\/activity\/advertisement url reject
 # > iQIYI - act.vip.iqiyi.com,intl.iqiyi.com
+# > 爱奇艺
+# hostname = -i.vip.iqiyi.com, *.iqiyi.com
+# 播放页开通会员提示
+^https?:\/\/act\.vip\.iqiyi\.com\/interact\/api\/v2\/show\? url reject-dict
+# 首页信息流广告
+^https?:\/\/[\d\.]+\/3f1\/cards\.iqiyi\.com\/(views_home\/3\.0\/qy_home|waterfall\/3\.0\/feed)\? url script-response-body https://raw.githubusercontent.com/re2/g/master/cnftp.js
+^https?:\/\/access\.if\.iqiyi\.com\/3f1\/cards\.iqiyi\.com\/(views_category\/3\.0\/category_home|views_home\/3\.0\/qy_home|waterfall\/3\.0\/feed)\? url script-response-body https://raw.githubusercontent.com/re2/g/master/cnftp.js
+^https?:\/\/cards\.iqiyi\.com\/views_category\/3\.0\/(category_home|categorylib_content|film_hybrid)\? url script-response-body https://raw.githubusercontent.com/re2/g/master/cnftp.js
+^https?:\/\/cards\.iqiyi\.com\/(views_home\/3\.0\/qy_home|waterfall\/3\.0\/feed)\? url script-response-body https://raw.githubusercontent.com/re2/g/master/cnftp.js
+# 播放详情页
+^https?:\/\/cards\.iqiyi\.com\/views_plt\/3\.0\/player_tabs_v2\? url script-response-body https://raw.githubusercontent.com/re2/g/master/cnftp.js
+# 搜索页列表
+^https?:\/\/cards\.iqiyi\.com\/views_search\/3\.0\/(hot_query_)?search\? url script-response-body https://raw.githubusercontent.com/re2/g/master/cnftp.js
+# 评论区
+^https?:\/\/comment-card\.iqiyi\.com\/views_comment\/3\.0\/long_video_comments\? url script-response-body https://raw.githubusercontent.com/re2/g/master/cnftp.js
+# 我的页面菜单
+^https?:\/\/iface2\.iqiyi\.com\/aggregate\/3\.0\/getMyMenus\? url script-response-body https://raw.githubusercontent.com/re2/g/master/cnftp.js
+# 首页左上角天气
+^https?:\/\/iface2\.iqiyi\.com\/control\/3\.0\/init_proxy\? url script-response-body https://raw.githubusercontent.com/re2/g/master/cnftp.js
+# 通用控制,各tab页二楼
+^https?:\/\/iface2\.iqiyi\.com\/fusion\/3\.0\/common_switch\? url script-response-body https://raw.githubusercontent.com/re2/g/master/cnftp.js
+# 播放页多余动效
+^https?:\/\/iface2\.iqiyi\.com\/ivos\/interact\/video\/data\? url reject-dict
+# 播放页升级白金会员按钮
+^https?:\/\/iface2\.iqiyi\.com\/video\/3\.0\/v_interface_proxy\? url reject-dict
+# 底部tab,顶部tab
+^https?:\/\/iface2\.iqiyi\.com\/views\/3\.0\/(bottom_theme|home_top_menu)\? url script-response-body https://raw.githubusercontent.com/re2/g/master/cnftp.js
+# 青少年弹窗
+^https?:\/\/iface2\.iqiyi\.com\/views_pop\/3\.0\/pop_control\? url reject-dict
+# 搜索框填充词
+^https?:\/\/search\.video\.iqiyi\.com\/q\? url script-response-body https://raw.githubusercontent.com/re2/g/master/cnftp.js
+# 开屏广告,播放广告
+^https?:\/\/(kjp|t7z)\.cupid\.iqiyi\.com\/mixer\? url script-response-body https://raw.githubusercontent.com/re2/g/master/cnftp.js
 ^https?:\/\/iface\.iqiyi\.com\/api\/getNewAdInfo url reject
 ^https?:\/\/act\.vip\.iqiyi\.com\/interact\/api\/show\.do url reject
 ^https?:\/\/act\.vip\.iqiyi\.com\/interact\/api\/v\d\/show url reject
@@ -649,6 +682,32 @@ https:\/\/pan\.baidu\.com\/rest\/\d\.\d\/membership\/user url script-response-bo
 ^https?:\/\/api\.club\.lenovo\.cn\/common\/open_ad url reject
 
 # M
+# > 芒果TV
+# hostname = *.mgtv.com
+# 无用请求
+^https?:\/\/[\d\.]+:\d{5}\/\?cmd=indexes url reject
+# 首页左上角推广
+^https?:\/\/[\d\.]+\/odin\/c1\/(channel\/ads|skin\/config)\? url reject-dict
+# 底部tab红点
+^https?:\/\/damang\.api\.mgtv\.com\/station\/album\/red\/dot\? url reject-dict
+# 播放器界面
+^https?:\/\/hb-boom\.api\.mgtv\.com\/release\/pullReleaseInfo url reject-dict
+# 我的页面
+^https?:\/\/me\.bz\.mgtv\.com\/v3\/module\/list\? url script-response-body https://raw.githubusercontent.com/re2/g/master/cnftp.js
+# 首页信息流,顶部tab
+^https?:\/\/mob-st\.bz\.mgtv\.com\/odin\/c1\/channel\/index\? url script-response-body https://raw.githubusercontent.com/re2/g/master/cnftp.js
+^https?:\/\/dc2?\.bz\.mgtv\.com\/dynamic\/v1\/channel\/(index|vrsList)\/\w url script-response-body https://raw.githubusercontent.com/re2/g/master/cnftp.js
+# 底部tab
+^https?:\/\/mobile\.api\.mgtv\.com\/mobile\/config\? url script-response-body https://raw.githubusercontent.com/re2/g/master/cnftp.js
+# 升级弹窗
+^https?:\/\/mobile\.api\.mgtv\.com\/v2\/mobile\/checkUpdate\? url reject-dict
+# 播放详情页
+^https?:\/\/mobile\.api\.mgtv\.com\/v10\/video\/info\? url script-response-body https://raw.githubusercontent.com/re2/g/master/cnftp.js
+^https?:\/\/mobile-thor\.api\.mgtv\.com\/v1\/vod\/info\? url script-response-body https://raw.githubusercontent.com/re2/g/master/cnftp.js
+# 搜索框填充词
+^https?:\/\/mobileso\.bz\.mgtv\.com\/spotlight\/search\/v1\? url reject-dict
+^https?:\/\/mobileso\.bz\.mgtv\.com\/mobile\/recommend\/v2\? url script-response-body https://raw.githubusercontent.com/re2/g/master/cnftp.js
+
 # > MI - api.m.mi.com,api.jr.mi.com,api-mifit.huami.com,home.mi.com
 ^https?:\/\/api\.m\.mi\.com\/v\d\/app\/start url reject
 ^https?:\/\/api\.jr\.mi\.com\/jr\/api\/splashScreen url reject
